- settings: use decimal keys in config
- settings: support filter mime types
- added qtfm-launcher (can be used as an app launcher in openbox etc, also supports xdg-open type actions)
- (u)disks now supports disk labels (with device name as fallback)
- bookmarks: added "link" option in file actions
- shared library (libQtFM) is now default (disable with CONFIG+=staticlib)

6.1.7 10-February 2019
- context menu fixes
- settings dialog: fix performance issues on old CPUs

6.1.6 31-January 2019
- progress dialog fix
- path tab-completion. Thanks to @kubaroth for the patch
- completer handles expansion of ~ path. Thanks to @kubaroth for the patch
- support mouse back button
- macOS support
- NetBSD support

6.1.5 09-December 2018
- fix build if CONFIG+=no_dbus enabled
- fixed broken multiple file copy/move instances

6.1.4 26-November 2018
- fix potential config corruption. Thanks to @slackuser0xae34 for the patch
- fix segfault on thumbnail update (view may have changed since loading thumbnails)
- don't cut file(s) if moving to same directory in bookmarks
- verify reply from udisks (avoid crash)
- populate view if not watched
- fix refresh view
- improved performance

6.1.3 07-October 2018
- update grid on paste/remove
- settings: don't show "launcher" in application dialog
- added manual refresh of path

6.1.2 11-September 2018
- fixed broken file type check on custom actions
- added new (default) custom actions
- fixed issue with /etc/mtab not being read properly on some systems
- settings: added restore custom actions to default option
- FreeBSD: fixed issue with UDisks
- associate more mime types with icons

6.1.1 25-August 2018
- fixed ask dialog in bookmarks when drag-and-drop
- update listview grid earlier
- tray: fix open mountpoint in qtfm (with spaces)

6.1.0 04-August 2018
- added system tray daemon (qtfm-tray), auto mount/play storage/optical
- drag-and-drop: add settings for modifiers
- inotify fixes
- fixed refresh of thumbnails